# bilingual_book_maker

./: my_prompt_template.json  pyproject.toml  translate.sh
